# new-hypermodern

./: LICENSE  README.md  noxfile.py  pyproject.toml
src/new_hypermodern/: console.py
tests/: test_console.py  test_new_hypermodern.py
