[tool.poetry]
name = "new-hypermodern"
version = "0.1.0"
description = "JONHs hypermodern project"
license = "MIT"
authors = ["Jon Palle Hansen <jonh@demant.com>"]
keywords = ["hypermodern"]

[tool.poetry.scripts]
new-hypermodern = "new_hypermodern.console:main"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
